--- a/app/views/application/_user_menu.haml
+++ b/app/views/application/_user_menu.haml
@@ -12,6 +12,6 @@
   = component('dropdown', dropdown) # TODO: (see component)
 
 = form_tag 'session/sign_out' do
-  = component('button', 'tertiary') do
+  = component('button.tertiary') do
     = component('icon.power-off')
     = 'Log Out'
