test: styleguide: update for  new Firefox ESR
- add new styleguide reference hashes
- upgrade test spec,  reorder for cider
- attach screenshots as .tar.gz if regenerating or failed
    - for local checking and diffing, and to always keep the latest reference as file (not only hash)
- styleguide: set min-height and min-width on window for more consistent screenshots

--- a/app/assets/stylesheets/styleguide.sass
+++ b/app/assets/stylesheets/styleguide.sass
@@ -8,6 +8,10 @@ $mono: 'Menlo', 'Monaco', 'Lucida Console', monospace
 $sans: 'Helvetica Neue', sans-serif
 $bluish: #f0f7fb
 
+html
+  min-width: 1200px
+  min-height: 600px
+
 html, body
   margin: 0
   padding: 0
