Admin interface: users manage section
Squashed commit of the following:
- include FactoryGirl methods into test suites
- replace label with placeholder
- add users' sorting
- user's show view
- admin can switch to an user
- admin can reset usage terms for a specyfic user
- admin can grant admin role to a specyfic user
- admin can remove the admin role from a specyfic user
- user views improvements
- user is editable by an admin
- admin can create a new user with person
- admin can create user for existing person
- admin can destroy an user
- rubocop, flay & flog fixes

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -23,6 +23,8 @@
               Madek Admin
           #main-navbar-collapse.navbar-collapse.collapse
             %ul.nav.navbar-nav.navbar-right
+              = navbar_item 'Dashboard', admin_root_path
+              = navbar_item 'Users', admin_users_path
               %li.dropdown
                 %a.dropdown-toggle{href: '#', data: { toggle: 'dropdown' }}
                   %i.glyphicon.glyphicon-user
