styleguide: add todo=true for elements to implement, consistent linebreaks

--- a/app/views/styleguide/04_Buttons & Links/_1_links.html.haml
+++ b/app/views/styleguide/04_Buttons & Links/_1_links.html.haml
@@ -1,6 +1,6 @@
 :ruby
   element = {
-    name: 'Links',
+    name: 'Links', todo: true,
     cssFile: '_buttons.scss',
     cssSelector: 'a',
     section: '4.1',
@@ -16,4 +16,5 @@
 = partial('element', element) do
   - element[:mods].each do |name, description|
     = partial('example', { mod: name}) do
+
       %a{:class => name} Link
