--- a/app/views/styleguide/04_Buttons & Links/_6_button-groups.html.haml
+++ b/app/views/styleguide/04_Buttons & Links/_6_button-groups.html.haml
@@ -1,6 +1,6 @@
 :ruby
   element = {
-    name: 'Button group',
+    name: 'Button group', todo: true,
     description: 'groups several buttons into one element',
     cssFile: '_button-groups.scss',
     cssSelector: '.button-group',
@@ -17,6 +17,7 @@
 = partial('element', element) do
   - element[:mods].each do |name, description|
     = partial('example', { mod: name}) do
+
       .button-group{class: name}
         %button.button.active{class: name} Alle
         %button.button{class: name} Medienträge
