--- a/app/views/styleguide/07_Components/_21_tooltip.html.haml
+++ b/app/views/styleguide/07_Components/_21_tooltip.html.haml
@@ -1,6 +1,6 @@
 :ruby
   element = {
-    name: 'Tooltip',
+    name: 'Tooltip', todo: true,
     cssSelector: '.ui-ttip-toggle',
     cssFile: '_ui-tooltip.scss',
     section: '7.21'
@@ -8,5 +8,6 @@
 
 = partial('element', element) do
   = partial('example') do
+
     %div{:style => "padding-top: 50px;margin: 0 auto;padding-right: 50px;padding-bottom: 50px;padding-left: 50px"}
       %a.ui-ttip-toggle{:title => "Tooltip Text"} Tooltip toggle
