--- a/app/views/styleguide/07_Components/_23_contexts.html.haml
+++ b/app/views/styleguide/07_Components/_23_contexts.html.haml
@@ -1,6 +1,6 @@
 :ruby
   element = {
-    name: 'Contexts',
+    name: 'Contexts', todo: true,
     cssSelector: '.ui-contexts',
     cssFile: '???',
     section: '7.23',
@@ -9,6 +9,7 @@
 
 = partial('element', element) do
   = partial('example') do
+
     .ui-contexts
       .row
         .col1of3
