--- a/app/views/styleguide/07_Components/_24_counter.html.haml
+++ b/app/views/styleguide/07_Components/_24_counter.html.haml
@@ -1,6 +1,6 @@
 :ruby
   element = {
-    name: 'Counters',
+    name: 'Counters', todo: true,
     cssSelector: '.ui-counter',
     cssFile: '???',
     section: '7.24',
@@ -9,4 +9,5 @@
 
 = partial('element', element) do
   = partial('example') do
+
     %span.ui-counter (6)
