--- a/app/views/styleguide/08_Combos/_04_footer.html.haml
+++ b/app/views/styleguide/08_Combos/_04_footer.html.haml
@@ -1,6 +1,6 @@
 :ruby
   element = {
-    name: 'Footer',
+    name: 'Footer', todo: true,
     cssFile: '_ui-footer.scss',
     cssSelector: '.ui-footer',
     section: '8.4'
@@ -8,6 +8,7 @@
 
 = partial('element', element) do
   = partial('example') do
+
     %footer.ui-footer.ui-container.inverted
       %ul.ui-footer-menu
         %li
