--- a/app/views/styleguide/08_Combos/_10_featured-entries.html.haml
+++ b/app/views/styleguide/08_Combos/_10_featured-entries.html.haml
@@ -1,6 +1,6 @@
 :ruby
   element = {
-    name: 'Featured entries',
+    name: 'Featured entries', todo: true,
     cssFile: '_ui-featured-entries.scss',
     cssSelector: '.ui-featured-entries',
     section: '8.10',
