--- a/app/views/styleguide/08_Combos/_18_search-form.html.haml
+++ b/app/views/styleguide/08_Combos/_18_search-form.html.haml
@@ -1,6 +1,6 @@
 :ruby
   element = {
-    name: 'Search Form',
+    name: 'Search Form', todo: true,
     cssFile: '_ui-search-form.scss',
     cssSelector: '.ui-search-form',
     section: '8.18'
@@ -8,6 +8,7 @@
 
 = partial('element', element) do
   = partial('example') do
+
     .ui-search-form
       %form{"accept-charset" => "UTF-8", :action => "/search", :method => "post"}
         %div{:style => "margin:0;padding:0;display:inline"}
