--- a/app/views/styleguide/10_Upcoming - Actions n Stats/_1_relations.html.haml
+++ b/app/views/styleguide/10_Upcoming - Actions n Stats/_1_relations.html.haml
@@ -1,6 +1,6 @@
 :ruby
   element = {
-    name: 'Zusammenhänge',
+    name: 'Zusammenhänge', todo: true,
     cssFile: '???',
     cssSelector: '???',
     section: '11.1'
@@ -9,6 +9,7 @@
 = partial('element', element) do
 
   = partial('example', { mod: 'Logged In Variation'}) do
+
     .sg-spacer{:style => "min-height: 200px;"}
       .app-body-title
         .ui-body-title
