--- a/app/views/styleguide/05_Forms/_3_form-search.html.haml
+++ b/app/views/styleguide/05_Forms/_3_form-search.html.haml
@@ -1,6 +1,6 @@
 :ruby
   element = {
-    name: 'Search input',
+    name: 'Search input', todo: true,
     cssFile: '_ui-search-field.scss',
     cssSelector: '.ui-search',
     section: '5.3',
@@ -13,6 +13,7 @@
 = partial('element', element) do
   - element[:mods].each do |name, description|
     = partial('example', { mod: name}) do
+
       .ui-search{class: name}
         %input.block.ui-search-input{:type => "text"}/
         %button.primary-button.ui-search-button Search
