--- a/app/views/styleguide/06_Icons/_1_icon-arrow.html.haml
+++ b/app/views/styleguide/06_Icons/_1_icon-arrow.html.haml
@@ -1,6 +1,6 @@
 :ruby
   element = {
-    name: 'Arrow Icons',
+    name: 'Arrow Icons', todo: true,
     cssFile: '_icons.scss',
     cssSelector: '.icon-arrow-',
     section: '6.1',
@@ -18,6 +18,7 @@
 = partial('element', element) do
   - element[:mods].each do |name, description|
     = partial('example', { mod: name}) do
+
       %i.icon-arrow-up{class: name}
       %i.icon-arrow-right{class: name}
       %i.icon-arrow-down{class: name}
