--- a/app/views/styleguide/06_Icons/_6_icon-header-nav.html.haml
+++ b/app/views/styleguide/06_Icons/_6_icon-header-nav.html.haml
@@ -1,6 +1,6 @@
 :ruby
   element = {
-    name: 'Header Nav Icons',
+    name: 'Header Nav Icons', todo: true,
     cssFile: '_icons.scss',
     cssSelector: '.icon-',
     section: '6.6',
@@ -13,6 +13,6 @@
 = partial('element', element) do
   - element[:mods].each do |name, description|
     = partial('example', { mod: name}) do
+
       = component('icon.nav-help', name)
       = component('icon.nav-search', name)
-
