--- a/app/views/styleguide/07_Components/_01_containers.html.haml
+++ b/app/views/styleguide/07_Components/_01_containers.html.haml
@@ -1,6 +1,6 @@
 :ruby
   element = {
-    name: 'ui-containers',
+    name: 'ui-containers', todo: true,
     cssSelector: '.ui-container',
     cssFile: '_ui-containers.scss',
     section: '7.1',
@@ -21,5 +21,6 @@
 = partial('element', element) do
   - element[:mods].each do |name, description|
     = partial('example', { mod: name}) do
+
       .ui-container{class: name}
         .dummy{:style => "height:80px"}
