--- a/app/views/styleguide/07_Components/_18_thumb-micro.html.haml
+++ b/app/views/styleguide/07_Components/_18_thumb-micro.html.haml
@@ -1,6 +1,6 @@
 :ruby
   element = {
-    name: 'Micro thumbnails',
+    name: 'Micro thumbnails', todo: true,
     cssSelector: '.ui-thumbnail.micro',
     cssFile: '_ui-thumb-micro.scss',
     section: '7.18'
@@ -8,5 +8,6 @@
 
 = partial('element', element) do
   = partial('example') do
+
     %img.ui-thumbnail.micro{:alt => "ZHdK", :src => asset_path('styleguide/media-entry-1.jpg')}/
     %img.ui-thumbnail.micro{:alt => "wav", :src => "/assets/thumbnails/audio_small.wav.png"}/
