--- a/app/views/styleguide/08_Combos/_08_1_collage.html.haml
+++ b/app/views/styleguide/08_Combos/_08_1_collage.html.haml
@@ -1,6 +1,6 @@
 :ruby
   element = {
-    name: 'Crooked Collage',
+    name: 'Crooked Collage', todo: true,
     cssFile: '_ui-collage.scss',
     cssSelector: '.ui-collage.crooked',
     section: '8.8.2'
@@ -8,6 +8,7 @@
 
 = partial('element', element) do
   = partial('example') do
+
     .ui-collage.crooked
       .ui-collage-row
         .ui-collage-item.odd
@@ -73,4 +74,3 @@
         .ui-collage-item.odd
           .ui-collage-item-wrapper
             %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-4.jpeg')}/
-
