--- a/app/views/styleguide/08_Combos/_15_confirmation-dialog.html.haml
+++ b/app/views/styleguide/08_Combos/_15_confirmation-dialog.html.haml
@@ -1,6 +1,6 @@
 :ruby
   element = {
-    name: 'Confirmation dialog',
+    name: 'Confirmation dialog', todo: true,
     cssFile: '_ui-confirmation-dialog.scss',
     cssSelector: '.modal',
     section: '8.15'
@@ -8,6 +8,7 @@
 
 = partial('element', element) do
   = partial('example') do
+
     .modal.hide.fade.ui-modal.narrow.in.ui-shown{:style => "display: block;", :tabindex => "-1"}
       %form
         .ui-modal-head
