--- a/app/views/styleguide/08_Combos/_16_resources-table.html.haml
+++ b/app/views/styleguide/08_Combos/_16_resources-table.html.haml
@@ -1,6 +1,6 @@
 :ruby
   element = {
-    name: 'Media resources table',
+    name: 'Media resources table', todo: true,
     cssFile: '_ui-resources-table.scss',
     cssSelector: '.ui-resources-table',
     section: '8.16'
@@ -8,6 +8,7 @@
 
 = partial('element', element) do
   = partial('example') do
+
     .ui-resources-table
       %table.block
         %thead
